Case-base-create

--- a/templates/index.html
+++ b/templates/index.html
@@ -154,7 +154,7 @@
 
   <body>
     <div class="header">
-      <div class="header-title">小雯~智能AI Agent助手</div>
+      <div class="header-title">ATOU Tunnel~智能AI Agent助手</div>
     </div>
 
     <div class="chat-container">
